--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -105,7 +105,8 @@ padding: 0 16px;
     line-height: 40px; 
     position: absolute; 
     bottom: 0px; 
-    width: 99%; 
+    width: 100%; 
+    left: 0px;
     color: rgba(0,0,0,.54);
 }
 
